--- a/app/api/package.json
+++ b/app/api/package.json
@@ -27,11 +27,15 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@neo4j/graphql": "^1.0.3",
+    "apollo-server": "^2.25.1",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "graphql": "^15.5.1",
     "helmet": "^4.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "neo4j-driver": "^4.3.1"
   }
 }
