--- a/kubernetes/Vagrantfile
+++ b/kubernetes/Vagrantfile
@@ -8,6 +8,7 @@ Vagrant.configure("2") do |config|
     node.vm.hostname          = "kmaster.local"
     node.vm.network "private_network", ip: "172.16.16.100"
     node.vm.provider :virtualbox do |v|
+      v.image   = "debian:buster-slim"
       v.name    = "kmaster"
       v.memory  = 2048
     end
@@ -21,6 +22,7 @@ Vagrant.configure("2") do |config|
       node.vm.hostname          = "kworker#{i}.local"
       node.vm.network "private_network", ip: "172.16.16.10#{i}"
       node.vm.provider :virtualbox do |v|
+        v.image   = "debian:buster-slim"
         v.name    = "kworker#{i}"
         v.memory  = 1024
         v.cpus    = 1
